# blackmagic-output

./: .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG_MATRIX_API.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  blackmagic_output.py  check_version.py  decklink_hdr_frame.cpp  decklink_wrapper.cpp  decklink_wrapper.hpp  decklink_wrapper_mac.cpp  diagnose_decklink.py  pyproject.toml  python_bindings.cpp  requirements.txt  setup.py  test_basic.py  test_build.py  test_capture.py
.github/workflows/: build-and-test.yml  build-wheels.yml
_vendor/decklink_sdk/Mac/include/unused/: DeckLinkAPIDispatch_v8_0.cpp  DeckLinkAPI_v7_9.h  DeckLinkAPI_v8_0.h  DeckLinkAPI_v8_1.h  DeckLinkAPI_v9_2.h  DeckLinkAPI_v9_9.h
_vendor/decklink_sdk/Win/include/: DeckLinkAPI.idl  DeckLinkAPIConfiguration.idl  DeckLinkAPITypes.idl
_vendor/decklink_sdk/Win/include/unused/: DeckLinkAPI_v7_1.idl
decklink_sdk/Linux/include/: DeckLinkAPI.h
decklink_sdk/Mac/include/unused/: DeckLinkAPI_v7_3.h
decklink_sdk/include/unused/: DeckLinkAPIDispatch_v7_6.cpp  DeckLinkAPI_v7_1.h  DeckLinkAPI_v7_6.h
examples/: capture_preview.py  example_usage.py  hdr_simple_api.py  timecode_example.py
examples/advanced/: README.md  display_tpat.py
src/: decklink_common.cpp  decklink_common.hpp  decklink_hdr_frame.cpp  decklink_hdr_frame.hpp  decklink_input.cpp  decklink_input.hpp  decklink_output.cpp  decklink_output.hpp  decklink_wrapper.cpp  decklink_wrapper.hpp  decklink_wrapper_mac.cpp  python_bindings.cpp
src/blackmagic_io/: __init__.py  blackmagic_io.py
src/blackmagic_output/: __init__.py  blackmagic_output.py
tests/: diagnose_decklink.py  test_capture.py  test_conversion_ranges.py  test_device_detection.py  test_loopback.py  test_metadata_combinations.py  test_output_info.py  test_resolutions.py  test_rgb10_colorbars.py  test_rgb12_colorbars.py  test_support_query.py  test_yuv_conversion.py
tools/: CMakeLists.txt  Makefile  README.md  pixel_reader  pixel_reader.cpp
